--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,7 +36,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.ifeira_app_1"
+        applicationId "com.noob.ifeira_app_1"
         minSdkVersion 16
         targetSdkVersion 28
         multiDexEnabled true
