--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ifeira_app_1">
+    package="com.noob.ifeira_app_1">
    <application
-        android:label="ifeira_app_1"
+        android:label="Atv Fagner"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
