--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   shared_preferences: ^2.0.6
   animations: ^2.0.1
   modal_bottom_sheet: ^2.0.0
+  plugin_platform_interface: ^1.0.3
+  cloud_firestore: ^0.5.0
 
 dev_dependencies:
   flutter_test:
