--- a/.gitignore
+++ b/.gitignore
@@ -44,5 +44,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
-**/ios/GoogleService-Info.plist
-**/android/app/google-services.json
+/android/app/google-services.json
